--- a/src/layout/privateLayout/components/NavbarAdmin.scss
+++ b/src/layout/privateLayout/components/NavbarAdmin.scss
@@ -32,7 +32,7 @@
         cursor: pointer;
 
         img {
-          height: 80%;
+          height: 100%;
 
           @include mobile {
             height: 70%;
